# simple_gtest_template

./: CMakeLists.txt  main.cpp  readme.md  test_main.cpp
lib/addOn/: CMakeLists.txt  addon.cpp  addon.h
lib/func/: CMakeLists.txt  functions.cpp  functions.h
test/mocks/: mock_addon.h  mock_addon_gmock.h  test_main.cpp
